--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "expo": "~53.0.13",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
-    "react-native": "0.79.4"
+    "react-native": "0.79.4",
+    "expo-font": "~13.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
