--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.4",
-    "expo-font": "~13.3.1"
+    "expo-font": "~13.3.1",
+    "react-native-svg": "15.11.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
